// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingIndicator /> should match snapshot 1`] = `
<svg
  class="LoadingIndicator__Svg-sc-1uoud3c-0 eSJumQ"
  viewBox="-24 -24 48 48"
>
  <circle
    class="LoadingIndicator__Circle-sc-1uoud3c-1 jnnFam"
    cx="0"
    cy="0"
    fill="none"
    r="20"
    stroke-width="4"
  />
</svg>
`;

exports[`<LoadingIndicator /> should match snapshot when props changed 1`] = `
<svg
  class="LoadingIndicator__Svg-sc-1uoud3c-0 lgggPg"
  viewBox="-24 -24 48 48"
>
  <circle
    class="LoadingIndicator__Circle-sc-1uoud3c-1 jnnFam"
    cx="0"
    cy="0"
    fill="none"
    r="20"
    stroke-width="4"
  />
</svg>
`;
